<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ezfb_White"
    android:orientation="vertical"
    tools:context="apsupportapp.aperotechnologies.com.designapp.LoginActivity1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <!--  <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="70dp"
                  android:layout_marginLeft="40dp"
                  android:layout_marginRight="40dp"
                  android:layout_marginTop="150dp"
                  android:src="@mipmap/engage247_logo1"
                  tools:ignore="ContentDescription" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center_vertical|center_horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="Engage 24x7"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/ezfb_Red"
                    />

            </LinearLayout>



            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"
                android:gravity="left"
                android:hint="@string/username"
                android:textAllCaps="true"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/ezfb_black"
                android:textColorHint="@color/ezfb_black"
                android:textCursorDrawable="@drawable/cursor_color" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/ezfb_black"
                android:textColorHint="@color/ezfb_black"
                android:textCursorDrawable="@drawable/cursor_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkKeepMeLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:buttonTint="@color/ezfb_Red"
                    android:text="@string/loggedin"
                    android:textColor="@color/ezfb_black" />

            </LinearLayout>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="25dp"
                android:text="LOG IN"
                app:backgroundTint="@color/ezfb_Red"
                android:textColor="@color/ezfb_White"

                />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:weightSum="3"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@mipmap/big_bazaar"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@mipmap/fbb"
                    android:layout_weight="1"
                    android:layout_margin="7dp"

                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@mipmap/ezone"
                    android:layout_weight="1"
                    android:layout_margin="7dp"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:weightSum="2"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@mipmap/central"
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@mipmap/brand_factory"
                    android:layout_weight="1"
                    android:layout_margin="7dp"

                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
